--- a/Draw/Controller/Home/Menu/DiceMenu~ipad.xib
+++ b/Draw/Controller/Home/Menu/DiceMenu~ipad.xib
@@ -61,7 +61,7 @@
 						</object>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">h_feed@2x.png</string>
+							<string key="NSResourceName">dice_start@2x.png</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
@@ -272,7 +272,7 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="h_feed@2x.png">{134, 134}</string>
+			<string key="dice_start@2x.png">{16, 16}</string>
 			<string key="number@2x.png">{50, 45}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">933</string>
