--- a/Draw/Dice/View/DiceHelpView/DiceHelpView.xib
+++ b/Draw/Dice/View/DiceHelpView/DiceHelpView.xib
@@ -37,10 +37,25 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
+					<object class="IBUIView" id="993952677">
+						<reference key="NSNextResponder" ref="811135455"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrameSize">{320, 480}</string>
+						<reference key="NSSuperview" ref="811135455"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="102925007"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MAA</bytes>
+						</object>
+						<float key="IBUIAlpha">0.30000001192092896</float>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
 					<object class="IBUIImageView" id="102925007">
 						<reference key="NSNextResponder" ref="811135455"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{12, 26}, {297, 424}}</string>
+						<string key="NSFrame">{{12, 15}, {297, 435}}</string>
 						<reference key="NSSuperview" ref="811135455"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="911248886"/>
@@ -51,7 +66,7 @@
 					<object class="IBUIButton" id="952438166">
 						<reference key="NSNextResponder" ref="811135455"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{160, 35}, {92, 29}}</string>
+						<string key="NSFrame">{{160, 26}, {92, 29}}</string>
 						<reference key="NSSuperview" ref="811135455"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="509728187"/>
@@ -92,7 +107,7 @@
 					<object class="IBUIButton" id="911248886">
 						<reference key="NSNextResponder" ref="811135455"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{68, 35}, {92, 29}}</string>
+						<string key="NSFrame">{{68, 26}, {92, 29}}</string>
 						<reference key="NSSuperview" ref="811135455"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="952438166"/>
@@ -119,7 +134,7 @@
 					<object class="IBUIButton" id="509728187">
 						<reference key="NSNextResponder" ref="811135455"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{289, 7}, {31, 31}}</string>
+						<string key="NSFrame">{{289, 1}, {31, 31}}</string>
 						<reference key="NSSuperview" ref="811135455"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="118099370"/>
@@ -153,7 +168,7 @@
 					<object class="IBUIWebView" id="118099370">
 						<reference key="NSNextResponder" ref="811135455"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 72}, {280, 368}}</string>
+						<string key="NSFrame">{{20, 63}, {280, 375}}</string>
 						<reference key="NSSuperview" ref="811135455"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -172,7 +187,7 @@
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="102925007"/>
+				<reference key="NSNextKeyView" ref="993952677"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="844004429"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -268,6 +283,7 @@
 							<reference ref="911248886"/>
 							<reference ref="118099370"/>
 							<reference ref="102925007"/>
+							<reference ref="993952677"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -296,6 +312,11 @@
 						<reference key="object" ref="118099370"/>
 						<reference key="parent" ref="811135455"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">34</int>
+						<reference key="object" ref="993952677"/>
+						<reference key="parent" ref="811135455"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -305,6 +326,7 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">DiceHelpView</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.CustomClassName">FontButton</string>
@@ -320,7 +342,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">31</int>
+			<int key="maxID">34</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
